- `item`: avoid error when scanning items that have no quality rating (like bars and other construction materials)
- `gui/blueprint`: changed hotkey for setting blueprint origin tile so it doesn't conflict with default map movement keys
- `gui/launcher`: developer mode hotkey changed from Ctrl-D to Alt-D so as not to conflict with the hotkey for `gui/design`

## Misc Improvements
- `exportlegends`: make progress increase smoothly over the entire export and increase precision of progress percentage
- `gui/autobutcher`: ask for confirmation before zeroing out targets for all races
- `caravan`: move goods to trade depot dialog now allocates more space for the display of the value of very expensive items
- `extinguish`: allow selecting units/items/buildings in the UI to target them for extinguishing; keyboard cursor is only required for extinguishing map tiles that cannot be selected any other way
- `item`: change syntax so descriptions can be searched for without indicating the ``--description`` option. e.g. it's now ``item count royal`` instead of ``item count --description royal``
- `item`: add ``--verbose`` option to print each item as it is matched
- `gui/mod-manager`: will automatically unmark the default mod profile from being the default if it fails to load (due to missing or incompatible mods)
- `gui/quickfort`: can now dynamically adjust the dig priority of tiles designated by dig blueprints
- `gui/quickfort`: can now opt to apply dig blueprints in marker mode

## Removed
- `gui/manager-quantity`: the vanilla UI can now modify manager order quantities after creation
- `gui/create-tree`: replaced by `gui/sandbox`
- `warn-starving`: combined into `gui/notify`
- `warn-stealers`: combined into `gui/notify`

# 50.11-r6

## Fixes
- `makeown`: fix error when adopting units that need a historical figure to be created
- `item`: fix missing item categories when using ``--by-type``

# 50.11-r5

## New Tools